<resources>
    <string name="app_name">Uiclone</string>
    <string name="comunity_more">모임 \n둘러보기</string>
    <string name="topic">주제</string>
    <string name="topic1">인기글</string>
    <string name="topic2">동네백과</string>
    <string name="topic3">공공소식</string>
    <string name="local_must_go_restaurant">동네맛집</string>
    <string name="hobby">취미생활</string>
    <string name="famous">인기</string>
    <string name="clothes">의상</string>
    <string name="local">천호동</string>
    <string name="mydanggeun">나의 당근</string>
    <string name="mypageusername">이름</string>
    <string name="mypageshowprofile">프로필 보기</string>
    <string name="dgpayadv"><![CDATA[당근하는 새로운 방법, 당근페이!>]]></string>
    <string name="mypagecharge">＋ 충전</string>
    <string name="mypagesendmoney">계좌송금</string>
    <string name="mypage_latevisited">최근 방문</string>
    <string name="tag_all">전체</string>
    <string name="tag_sports">스포츠/레저</string>
    <string name="mypage_mytrade">나의 거래</string>
    <string name="mypage_interested">관심목록</string>
    <string name="mypage_sellList">판매내역</string>
    <string name="myPage_buylist">구매내역</string>
    <string name="mypage_usedaccoutbook">중고거래 가게부</string>
    <string name="mypage_mylocallife">나의 동네생활</string>
    <string name="mypage_myloaclact">동네생활 활동</string>
    <string name="mypage_mybusiness">나의 비즈니스</string>
    <string name="mypage_businessprofile">비즈프로필 관리</string>
    <string name="mypage_Advertising">광고</string>
    <string name="mypage_etc">기타</string>
    <string name="mypage_mylocalsetting">내 동네 설정</string>
    <string name="mypage_localauth">동네 인증하기</string>
    <string name="mypage_usedcategorysetting">중고거래 카테고리 설정</string>
    <string name="mypage_keywordalarm">키워드 알림 설정</string>
    <string name="mypage_FAQ">자주 묻는 질문</string>
    <string name="mypage_notice">공지사항</string>
    <string name="mypage_terms">약관 및 정책</string>
    <string name="bottommenu_myarround">내 근처</string>
    <string name="bottommenu_locallife">동네생활</string>
    <string name="bottommenu_home">홈</string>
    <string name="bottommenu_chat">채팅</string>
    <string name="bottommenu_mydg">나의 당근</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>