<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalLifeActivity"
    android:background="#222222">

    <LinearLayout
        android:id="@+id/layout_topMenu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_localarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="지역"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="170dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user"
            tools:layout_editor_absoluteX="250dp" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/search" />

        <ImageView
            android:id="@+id/iv_notificatiion"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_search"
            app:layout_constraintTop_toTopOf="@+id/iv_search"
            app:srcCompat="@drawable/notification" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_groupList"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/layout_topMenu"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_groupList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#111111"
        app:layout_constraintBottom_toBottomOf="@id/layout_groupList" />

    <LinearLayout
        android:id="@+id/layout_tag"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/view"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_topic"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/button_style"
            android:text="@string/topic"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_gravity="center|center_horizontal"
            android:padding="10dp"
            android:drawableStart="@drawable/menu_size"
            android:layout_marginLeft="10dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_topic1"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:background="@drawable/button_style"
            android:text="@string/topic1"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_gravity="center|center_horizontal"
            android:padding="10dp"
            android:drawableLeft="@drawable/fire_size"
            android:layout_marginLeft="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_topic2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/button_style"
            android:text="@string/topic2"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="10dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_topic3"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/button_style"
            android:text="@string/topic3"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="10dp"
            />

    </LinearLayout>

    <View
        android:id="@+id/v_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#333333"
        app:layout_constraintBottom_toBottomOf="@id/layout_tag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_divider">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_localLifePostList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>